feat(app.vue, nuxt.config.ts, package.json): display build version in UI and automate version generation
Add a build version display to the app's UI to provide users with
information about the current build. Introduce a new script to
automatically generate a build version based on the current date and
time, ensuring each build is uniquely identifiable. The build version
is read from a JSON file and injected into the Nuxt runtime config,
making it accessible in the application. This change enhances
transparency and traceability of deployed versions, aiding in debugging
and user support.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "generate-version": "node scripts/generate-build-version.js",
+    "build": "yarn generate-version && nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
