ci(build-version.yml): add GitHub Actions workflow for tagging releases
Create a new GitHub Actions workflow to automate the process of tagging
releases. The workflow triggers on push, pull request, and manual
dispatch events. It checks out the repository, installs dependencies,
generates a build version, and builds the application.

chore(package.json): remove redundant generate-version script from build command

The `generate-version` script is now handled separately in the GitHub
Actions workflow, making it unnecessary to include it in the local
build command. This change streamlines the build process and ensures
version generation is consistently managed by the CI pipeline.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "generate-version": "node scripts/generate-build-version.js",
-    "build": "yarn generate-version && nuxt build",
+    "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
