--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,8 +26,9 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/yourip-app:latest .
-          docker tag ghcr.io/${{ github.repository_owner }}/yourip-app:latest ghcr.io/${{ github.repository_owner }}/yourip-app:${{ github.ref_name }}
+          REPO_NAME=${GITHUB_REPOSITORY#*/}
+          docker build -t ghcr.io/${{ github.repository_owner }}/${REPO_NAME}:latest .
+          docker tag ghcr.io/${{ github.repository_owner }}/${REPO_NAME}:latest ghcr.io/${{ github.repository_owner }}/${REPO_NAME}:${{ github.ref_name }}
 
       - name: Push Docker Image
         run: |
