--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
     hooks:
       - id: no-commit-to-branch
         args: ['--branch', 'main'] # prevent local commits to main branch
+        args: ['--branch', 'develop'] # prevent local commits to develop branch
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-yaml
