--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "vue": "latest",
     "vue-router": "latest"
   },
+  "devDependencies": {
+    "cssnano": "^6.0.1"
+  },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
   "resolutions": {
-    "supports-color": "7.1.0"
+    "supports-color": "7.1.0",
+    "cssnano": "^6.0.1"
   }
 }
