feat(app): update UI and enhance build versioning
Replace the static title with a logo and updated heading in the app's main view for improved branding. Modify the build version display format for clarity. Update the build scripts in package.json to ensure version generation occurs before building. Introduce a new CI/CD pipeline configuration in ci.yml, consolidating previous workflows and enhancing the deployment process. Remove outdated workflow files to streamline the repository.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "scripts": {
     "generate-version": "node scripts/generate-build-version.js",
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
+    "build": "yarn generate-version && nuxt build",
+    "dev": "yarn generate-version && nuxt dev",
+    "generate": "yarn generate-version && nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
