--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,14 +2,13 @@
 # This file contains the configuration for pre-commit hooks.
 # Each hook helps maintain code quality by running automated checks before commits.
 #
-exclude: '(\..*\.y[a]?ml|\.github/workflows)'
+exclude: '(\..*\.y[a]?ml|\.github/workflows|build-version\.json)'
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
       - id: no-commit-to-branch
         args: ['--branch', 'main'] # prevent local commits to main branch
-        args: ['--branch', 'develop'] # prevent local commits to develop branch
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-yaml
