--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
-          branch: main
+          branch: develop
           base: main
           title: 'chore: merge develop into main for release ${{ github.ref_name }}'
           body: |
