chore(ci): update permissions in CI workflow for pull requests
- Add permissions for pull-requests and contents to enable write access in the CI workflow, ensuring proper functionality during automated pull request creation.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,9 @@ jobs:
     needs: [docker]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      pull-requests: write
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
